RESOLVED FIXED177854
RenderFragmentContainerRange should not hold raw pointers.
https://bugs.webkit.org/show_bug.cgi?id=177854
Summary RenderFragmentContainerRange should not hold raw pointers.
alan
Reported 2017-10-03 21:10:35 PDT
m_startFragment and m_endFragment
Attachments
Patch (4.32 KB, patch)
2017-10-03 21:49 PDT, alan
no flags
Archive of layout-test-results from ews114 for mac-elcapitan (1.83 MB, application/zip)
2017-10-04 00:19 PDT, Build Bot
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-03 21:11:01 PDT
alan
Comment 2 2017-10-03 21:49:07 PDT
Build Bot
Comment 3 2017-10-04 00:19:37 PDT
Comment on attachment 322630 [details] Patch Attachment 322630 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/4749712 New failing tests: workers/wasm-long-compile.html
Build Bot
Comment 4 2017-10-04 00:19:38 PDT
Created attachment 322636 [details] Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 5 2017-10-04 07:37:22 PDT
Comment on attachment 322630 [details] Patch Clearing flags on attachment: 322630 Committed r222847: <http://trac.webkit.org/changeset/222847>
WebKit Commit Bot
Comment 6 2017-10-04 07:37:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.