RenderFragmentContainerRange should not hold raw pointers. https://bugs.webkit.org/show_bug.cgi?id=177854 <rdar://problem/34805954>

Reviewed by Antti Koivisto.

m_startFragment and m_endFragment object's lifetimes are not tied to the lifetime of
RenderFragmentContainerRange.

Covered by existing tests.

* rendering/RenderFragmentedFlow.cpp:
(WebCore::RenderFragmentedFlow::setFragmentRangeForBox):
* rendering/RenderFragmentedFlow.h:


Canonical link: https://commits.webkit.org/194126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222847 268f45cc-cd09-0410-ab3c-d52691b4dbfc